Fix search input contrast

--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -5,7 +5,7 @@
   height: 100vh;
   width: 280px;
   padding: 0 30px 0 40px;
-  background-color: var(--dark-blue);
+  background-color: var(--very-dark-blue);
   z-index: 2;
 }
 
